--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
          "Hexzy"
       ],   
    "repository": "https://github.com/prabhasha-p/Hexzy",
-   "logo": "https://telegra.ph/file/23c40c8b88da2370e9743.jpg",
+   "logo": "https://telegra.ph/file/a21673559699899dd8911.png",
    "addons": [
     {
          "options": {
